nailed flickering info panel bug in safari

--- a/app/less/pages/blog/blog-header.less
+++ b/app/less/pages/blog/blog-header.less
@@ -3,6 +3,7 @@ header.blog-header {
 	background:url(../images/blog-header.jpg);
 	background-size:cover;
 	background-position:center;
+	background-attachment:fixed;
 	width:100%;
 	height:100vh;
 	.blog-header-bg {
@@ -12,14 +13,17 @@ header.blog-header {
 		width:100%;
 		background:black;
 		opacity:0.5;
+		display:none;
 	}
 }
 .blog-header-text {
 	width:100%;
-	top:40vh;
+	position:relative;
+	top:40%;
 	color:white;
 	z-index:-1;
 	font-size:0.5em;
+	z-index:1;
 	h1 {
 		font-size:7em;
 		margin:0;
