--- a/app/less/pages/showcase/showcase-work.less
+++ b/app/less/pages/showcase/showcase-work.less
@@ -347,13 +347,8 @@ div.wk-panel-items {
         border-top:5px solid @primary-color;
         z-index: 0;
         opacity: 0;
-        -webkit-transform: translateY(0);
-        -moz-transform: translateY(0);
-        -ms-transform: translateY(0);
-        transform: translateY(0);
-        -webkit-transition: -webkit-transform 0.5s ease-in-out, opacity 0s linear 0.5s;
-        -moz-transition: -moz-transform 0.5s ease-in-out, opacity 0s linear 0.5s;
-        transition: transform 0.5s ease-in-out, opacity 0s linear 0.5s;
+        top:100%;
+        transition: top 0.5s ease-in-out, opacity 0s linear 0.5s;
         & > div {
             width: 60%;
             margin: 0 auto;
@@ -406,26 +401,15 @@ div.wk-panel-items {
         }
     }
     & > div.wk-show-work {
-        z-index: 1000;
+        z-index: 2000;
         opacity: 1;
-        -webkit-transform: translateY(-50%);
-        -moz-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-        -webkit-transition: -webkit-transform 0.5s ease-in-out;
-        -moz-transition: -moz-transform 0.5s ease-in-out;
-        transition: transform 0.5s ease-in-out;
+        top:50%;
+        transition: top 0.5s ease-in-out;
     }
     & > div.wk-hide-current-work {
         opacity: 0;
-        -webkit-transform: translateY(-100%) scale(0.5);
-        -moz-transform: translateY(-100%) scale(0.5);
-        -ms-transform: translateY(-100%) scale(0.5);
-        transform: translateY(-100%) scale(0.5);
-        -ms-transform: translateY(-100%) scale(0.5);
-        -webkit-transition: -webkit-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;        
-        -moz-transition: -moz-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
-        transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+        top:100%;
+        transition: top 0.5s ease-in-out, opacity 0.5s ease-in-out;
         z-index: 0;
     }
 }
