--- a/app/less/partials/media-queries-navbar.less
+++ b/app/less/partials/media-queries-navbar.less
@@ -1,6 +1,6 @@
 
 
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 769px) {
 	nav {
 		height:5rem;
 		/*&.nav-full-height {
@@ -115,6 +115,9 @@
 		a {
 			text-align: left;
 		  	text-indent: 25px;
+		}
+		#home-icon {
+			display:none;
 		}
 		#nav-toggle {
 			display: block;
