--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1946,7 +1946,7 @@ footer .column.full {
 footer .flow-opposite {
   text-align: right;
 }
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 769px) {
   nav {
     height: 5rem;
     /*&.nav-full-height {
@@ -2040,6 +2040,9 @@ footer .flow-opposite {
   nav a {
     text-align: left;
     text-indent: 25px;
+  }
+  nav #home-icon {
+    display: none;
   }
   nav #nav-toggle {
     display: block;
@@ -4243,13 +4246,8 @@ div.wk-panel-items > div {
   border-top: 5px solid #e74c3c;
   z-index: 0;
   opacity: 0;
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -ms-transform: translateY(0);
-  transform: translateY(0);
-  -webkit-transition: -webkit-transform 0.5s ease-in-out, opacity 0s linear 0.5s;
-  -moz-transition: -moz-transform 0.5s ease-in-out, opacity 0s linear 0.5s;
-  transition: transform 0.5s ease-in-out, opacity 0s linear 0.5s;
+  top: 100%;
+  transition: top 0.5s ease-in-out, opacity 0s linear 0.5s;
 }
 div.wk-panel-items > div > div {
   width: 60%;
@@ -4301,25 +4299,15 @@ div.wk-panel-items nav span.wk-next-work {
   margin-right: 2em;
 }
 div.wk-panel-items > div.wk-show-work {
-  z-index: 1000;
+  z-index: 2000;
   opacity: 1;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  -webkit-transition: -webkit-transform 0.5s ease-in-out;
-  -moz-transition: -moz-transform 0.5s ease-in-out;
-  transition: transform 0.5s ease-in-out;
+  top: 50%;
+  transition: top 0.5s ease-in-out;
 }
 div.wk-panel-items > div.wk-hide-current-work {
   opacity: 0;
-  -webkit-transform: translateY(-100%) scale(0.5);
-  -moz-transform: translateY(-100%) scale(0.5);
-  transform: translateY(-100%) scale(0.5);
-  -ms-transform: translateY(-100%) scale(0.5);
-  -webkit-transition: -webkit-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
-  -moz-transition: -moz-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
-  transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  top: 100%;
+  transition: top 0.5s ease-in-out, opacity 0.5s ease-in-out;
   z-index: 0;
 }
 div.wk-panel-items.wk-panel-items-show nav {
@@ -5098,6 +5086,7 @@ header.blog-header {
   background: url(../images/blog-header.jpg);
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   width: 100%;
   height: 100vh;
 }
@@ -5108,13 +5097,16 @@ header.blog-header .blog-header-bg {
   width: 100%;
   background: black;
   opacity: 0.5;
+  display: none;
 }
 .blog-header-text {
   width: 100%;
-  top: 40vh;
+  position: relative;
+  top: 40%;
   color: white;
   z-index: -1;
   font-size: 0.5em;
+  z-index: 1;
 }
 .blog-header-text h1 {
   font-size: 7em;
